Attempted slide alignment fix

--- a/dtc-final-project/styles.css
+++ b/dtc-final-project/styles.css
@@ -317,19 +317,23 @@ figcaption {
 /* For the gallery JS */
 
 .slideshow {
+    flex: 1;
     position: relative;
     max-width: 900px;
-    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .slide {
     display: none;
-    position: relative;
+    position: absolute;
+    inset: 0;
 }
 
 .slide img {
     width: 100%;
-    height: auto;
+    height: 100%;
     object-fit: contain;
 }
 
